--- a/App/templates/decode.html
+++ b/App/templates/decode.html
@@ -54,17 +54,19 @@
                         </div>
                         <div id="blog" class="container tab-pane active"><br>
                             <div class="form-floating">
-                            <textarea class="form-control" id="" name="cover_text">
-                                {{ content }}
-                              </textarea>
-                              <label for="">Văn bản chứa thông tin giấu</label>
+                                <span for="">Văn bản chứa thông tin giấu</span>
+                                <textarea class="form-control" name="cover_text">
+                                    {{ content|safe }}
+                                </textarea>
                             </div>
                             <div class="mt-3">
                                 <button type="button" class="btn btn-primary">Bắt đầu tách tin</button>
                             </div>
                             <div class="form-floating mt-3">
-                              <textarea class="form-control" id="" name="cover_text" ></textarea>
-                              <label for="">Thông tin cần giấu</label>
+                                <span for="">Thông tin cần giấu</span>
+                                <textarea class="form-control" id="" name="cover_text" >
+                                    {{ message|safe|trim }}
+                                </textarea>
                             </div>
                             <div class="form-floating mt-3">
                                 <button type="button" class="btn btn-primary ms-1 text-white">Tải về</button>
