--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -3,7 +3,6 @@
 {% block content %}
 {% block current_user %}
     <h1 class="text-center">Welcome to our blogs!!!</h1>
-
     <section class="container mb-5">
         <div class="row">
             {% for i in range (blogs|length) %}
@@ -14,12 +13,14 @@
                         </div>
                         {% if current_user.is_authenticated %}
                             {% if current_user.user_role.value >= 2 %}
+                                {% if blogs[i].message_id != None %}
                                 <div>
                                     <button type="button" class="btn btn-outline-danger float-end m-1">Delete</button>
                                     <a href="/decode?blog={{ i + 1 }}">
                                         <button type="" class="btn btn-outline-success float-end m-1">Decode</button>
                                     </a>
                                 </div>
+                                {% endif %}
                             {% endif %}
                         {% endif %}
                     </div>
@@ -28,13 +29,13 @@
         </div>
     </section>
     <div class="container">
-            <ul class="pagination">
-                <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-                {% for i in range(pages) %}
-                    <li class="page-item"><a class="page-link" href="/?page={{ i + 1 }}">{{ i + 1 }}</a></li>
-                {% endfor %}
-                <li class="page-item"><a class="page-link" href="#">Next</a></li>
-            </ul>
-        </div>
+        <ul class="pagination">
+            <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+            {% for i in range(pages) %}
+                <li class="page-item"><a class="page-link" href="/?page={{ i + 1 }}">{{ i + 1 }}</a></li>
+            {% endfor %}
+            <li class="page-item"><a class="page-link" href="#">Next</a></li>
+        </ul>
+    </div>
 {% endblock %}
 {% endblock %}
