--- a/App/templates/layout/header.html
+++ b/App/templates/layout/header.html
@@ -22,8 +22,13 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/">
-                        <button type="button" class="btn btn-outline-secondary">Library Func</button>
+                    <a class="nav-link" href="/encode">
+                        <button type="button" class="btn btn-outline-secondary">Giấu tin</button>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/decode">
+                        <button type="button" class="btn btn-outline-secondary">Tách tin</button>
                     </a>
                 </li>
             </ul>
