--- a/App/templates/notif_column.html
+++ b/App/templates/notif_column.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<div class="col-sm-3">
+    <h2>CÁC THÔNG BÁO</h2>
+    <div class="fakeimg">Fake Image</div>
+</div>
