--- a/App/templates/stego.html
+++ b/App/templates/stego.html
@@ -1,20 +1,12 @@
-{% extends "layout/base.html" %}
-{% block title %}Text Decode{% endblock %}
-{% block content %}
-    {% block contents %}
-    <div class="container-fluid m-2 border center">
-        <div class="row">
-            <div class="col-sm-3">
-                <h2>CÁC THÔNG BÁO</h2>
-                <div class="fakeimg">Fake Image</div>
-            </div>
-
-            <div class="col-sm-6">
-                <ul class="list-unstyled">
+<div class="container-fluid m-2 border center">
+    <div class="row">
+        <div class="col-sm-6">
+            <ul class="list-unstyled">
+                <div id="encode" class="container tab-pane fade">
                     <div class="tab-content center">
                         <ul class="nav nav-tabs" role="tablist">
                             <li class="nav-item">
-                              <a class="nav-link " data-bs-toggle="tab" href="#file">File</a>
+                                <a class="nav-link" data-bs-toggle="tab" href="#file">File</a>
                             </li>
                             <li class="nav-item">
                               <a class="nav-link active" data-bs-toggle="tab" href="#blog">Blog</a>
@@ -52,41 +44,40 @@
                             </li>
                             <hr class="d-sm-none">
                         </div>
-                        <div id="blog" class="container tab-pane active"><br>
-                            <div class="form-floating">
-                                <span for="">Văn bản chứa thông tin giấu</span>
-                                <textarea class="form-control" type="text" name="cover_text" value="{{ content }}">
-                                    {{ content }}
-                                </textarea>
-                            </div>
-                            <div class="mt-3">
-                                <button type="button" class="btn btn-primary">Bắt đầu tách tin</button>
-                            </div>
-                            <div class="form-floating mt-3">
-                                <span for="">Thông tin cần giấu</span>
-                                <p class="form-control text-center" type="text" id="" name="cover_text">
-                                    {{ message }}
-                                </p>
-                            </div>
-                            <div class="form-floating mt-3">
-                                <button type="button" class="btn btn-primary ms-1 text-white">Tải về</button>
-                                <button type="button" class="btn btn-primary ms-1 text-white float-end">Gửi đi</button>
-                            </div>
-                            <div class="form-floating mt-3">
+                        <form method="get">
+                            <div id="blog" class="container tab-pane active"><br>
+                                <div class="form-floating">
+                                    <span for="">Tiêu đề văn bản chứa bên ngoài</span>
+                                    <textarea required class="form-control" type="text" name="en_cover_text_title">{{ title }}</textarea>
+                                </div>
+                                <div class="form-floating mt-3">
+                                    <span for="">Văn bản chứa</span>
+                                    <textarea required class="form-control" name="en_cover_text_content">{{ content }}</textarea>
+                                </div>
+                                <div class="form-floating mt-3">
+                                    <span>Thông tin cần giấu</span>
+                                    <textarea required class="form-control" name="en_msg">{{ "Found a teddy bear" }}</textarea>
+                                </div>
+                                <div class="form-floating mt-3">
+                                    <button type="submit" class="btn btn-primary">Bắt đầu tách tin</button>
+                                </div>
+                                <div class="form-floating mt-3">
+                                    <span for="">Văn bản đã chứa thông tin cần giấu</span>
+                                    <textarea class="form-control" type="text" name="em_text">{{ em_text }}</textarea>
+                                </div>
+                                <div class="form-floating mt-3">
+                                    <button type="button" class="btn btn-primary ms-1 text-white">Tải về</button>
+                                    <button type="button" class="btn btn-primary ms-1 text-white float-end">Gửi đi</button>
+                                </div>
+                                <div class="form-floating mt-3">
 
+                                </div>
                             </div>
-                        </div>
+                        </form>
                     </div>
-                </ul>
-            </div>
-
-            <div class="col-sm-3">
-                <h2>TITLE HEADING</h2>
-                <div class="fakeimg">Faked
-                    Image
-                    <br></div>
-            </div>
+                </div>
+            </ul>
         </div>
+
     </div>
-    {% endblock %}
-{% endblock %}
+</div>
