--- a/App/templates/title_heading_column.html
+++ b/App/templates/title_heading_column.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<div class="col-sm-3">
+    <h2>TITLE HEADING</h2>
+    <div class="fakeimg">Faked
+        Image
+    <br></div>
+</div>
