--- a/App/templates/encode.html
+++ b/App/templates/encode.html
@@ -28,7 +28,8 @@
                                     <input class="form-control" type="file" id="formFile">
                                 </li>
                                 <li class="nav-item">
-                                    <label for="" class="form-label text-danger">Bắt đầu thực hiện giấu tin vào văn bản</label><br>
+                                    <label for="" class="form-label text-danger">Bắt đầu thực hiện giấu tin vào văn
+                                        bản</label><br>
                                     <button type="button" class="btn btn-primary ms-1 text-danger">START</button>
 
                                 </li>
@@ -82,24 +83,28 @@
                                                 class="btn btn-primary ms-1 text-white">Tải lên
                                         </button>
                                         <div id="prompt" class="collapse mt-2">
-                                                <button id="upload" type="submit" class="btn btn-primary ms-1 btn-success">
-                                                    Xác nhận
-                                                </button>
+                                            <button id="upload" type="submit" class="btn btn-primary ms-1 btn-success">
+                                                Xác nhận
+                                            </button>
                                             <script>
-                                            // JavaScript to activate function on button click
-                                                document.getElementById('upload').addEventListener('click', function() {
-                                                    // Make an AJAX request to the Flask route
-                                                    var xhr = new XMLHttpRequest();
-                                                    xhr.open('POST', "/activate_function", true);
-                                                    xhr.setRequestHeader('Content-Type', 'application/json');
-                                                    xhr.onreadystatechange = function() {
-                                                        if (xhr.readyState === 4 && xhr.status === 200) {
-                                                            // Handle the response if needed
-                                                            var response = JSON.parse(xhr.responseText);
-                                                            console.log(response.message);
-                                                        }
-                                                    };
-                                                    xhr.send(JSON.stringify({title: "{{ title }}", message: "{{ msg }}", em_text: "{{ em_text }}", user_id : "{{ current_user.id }}" }));
+                                                // JavaScript to activate function on button click
+                                                document.getElementById('upload').addEventListener('click', function () {
+                                                    var em_text_value = document.querySelector('textarea[name="em_text"]').value;
+
+    // Make an AJAX request to the Flask route
+    var xhr = new XMLHttpRequest();
+    xhr.open('POST', "/activate_function", true);
+    xhr.setRequestHeader('Content-Type', 'application/json');
+    xhr.onreadystatechange = function() {
+        if (xhr.readyState === 4 && xhr.status === 200) {
+            // Handle the response if needed
+            var response = JSON.parse(xhr.responseText);
+            console.log(response.message);
+        }
+    };
+
+    // Send the updated value of em_text
+    xhr.send(JSON.stringify({title: "{{ title }}", message: "{{ msg }}", em_text: em_text_value, user_id : "{{ current_user.id }}" }));
                                                 });
                                             </script>
                                             <button type="button" class="btn btn-primary ms-1 btn-danger"
