Xong rồi đó nhagit commit -m git commit -m

--- a/App/templates/encode.html
+++ b/App/templates/encode.html
@@ -70,7 +70,7 @@
                                           name="en_msg">{{ msg }}</textarea>
                             </div>
                             <div class="form-floating mt-3">
-                                <button type="submit" class="btn btn-primary">Bắt đầu tách tin</button>
+                                <button type="submit" class="btn btn-primary">Bắt đầu giấu tin</button>
                             </div>
                             <div class="form-floating mt-3">
                                 <span for="">Văn bản đã chứa thông tin cần giấu</span>
