--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -2,23 +2,21 @@
 {% block title %}Trang chủ{% endblock %}
 {% block content %}
 {% block current_user %}
-    <h1 class="text-center">Welcome to our blogs!!!</h1>
+    <h1 class="text-center">Chào mừng đến với trang blog của nhóm!!!</h1>
     <section class="container mb-5">
         <div class="row">
             {% for i in range (blogs|length) %}
                 <div class="container mt-5 p-4 border">
                         <div class="container ">
                         <div>
-                            <a href="?blog={{ blogs[i].id }}"><h2>{{ blogs[i].title }}</h2></a>
+                            <a href="/content?blog={{ blogs[i].id }}"><h2>{{ blogs[i].title }}</h2></a>
                         </div>
                         {% if current_user.is_authenticated %}
                             {% if current_user.user_role.value >= 2 %}
                                 {% if blogs[i].message_id != None %}
                                 <div>
-                                    <button type="button" class="btn btn-outline-danger float-end m-1">Delete</button>
-                                    <a href="/decode?blog={{ i + 1 }}">
-                                        <button type="" class="btn btn-outline-success float-end m-1">Decode</button>
-                                    </a>
+                                    <button type="button" class="btn btn-outline-danger float-end m-1">Xóa tin</button>
+                                    <a href="/decode?blog={{ i + 1 }}"><button type="" class="btn btn-outline-success float-end m-1">Tách tin</button></a>
                                 </div>
                                 {% endif %}
                             {% endif %}
@@ -28,14 +26,14 @@
             {% endfor %}
         </div>
     </section>
-    <div class="container">
+    <!--<div class="container">
         <ul class="pagination">
             <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-            {% for i in range(pages) %}
-                <li class="page-item"><a class="page-link" href="/?page={{ i + 1 }}">{{ i + 1 }}</a></li>
-            {% endfor %}
+            {"% for i in range(pages) %"}
+                <li class="page-item"><a class="page-link" href="/?page={"{ i + 1 }"}">{"{ i + 1 }"}</a></li>
+            {"% endfor %"}
             <li class="page-item"><a class="page-link" href="#">Next</a></li>
         </ul>
-    </div>
+    </div>-->
 {% endblock %}
 {% endblock %}
