--- a/App/templates/layout/base.html
+++ b/App/templates/layout/base.html
@@ -23,5 +23,6 @@
 {% endblock %}
 
 {% include "layout/footer.html" %}
+<script src="{{ url_for('static', filename='js/email_enter.js') }}"></script>
 </body>
 </html>
